# gsStructuralAnalysis

./: CMakeLists.txt  README.md  gsALMBase.h  gsALMBase.hpp  gsALMConsistentCrisfield.h  gsALMConsistentCrisfield.hpp  gsALMCrisfield.h  gsALMCrisfield.hpp  gsALMExplicitIterations.h  gsALMExplicitIterations.hpp  gsALMExplorer.h  gsALMExplorer.hpp  gsALMHelper.h  gsALMLoadControl.h  gsALMLoadControl.hpp  gsALMRiks.h  gsALMRiks.hpp  gsALM_.cpp  gsAPALM.h  gsAPALM.hpp  gsAPALMBase.h  gsAPALMBase.hpp  gsAPALMData.h  gsAPALMData.hpp  gsAPALMDataContainer.h  gsAPALM_.cpp  gsAdaptiveALM.h  gsAdaptiveSpaceTime.h  gsArcLengthIterator.h  gsArcLengthIterator.hpp  gsArcLengthIterator_.cpp  gsBucklingSolver.h  gsBucklingSolver.hpp  gsBucklingSolver_.cpp  gsContinuationBase.h  gsControlDisplacement.h  gsDynamicRelaxation.h  gsDynamicRelaxation.hpp  gsDynamicRelaxationALM.h  gsDynamicRelaxationDC.h  (+38 more)
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_Balloon.cpp  benchmark_Beam.cpp  benchmark_Beam_APALM.cpp  benchmark_Cylinder.cpp  benchmark_Elasticity_Beam_APALM.cpp  benchmark_FrustrumALM.cpp  benchmark_FrustrumDC.cpp  benchmark_Frustrum_APALM.cpp  benchmark_MaterialTest.cpp  benchmark_MaterialTestConv.cpp  benchmark_Pillow.cpp  benchmark_Roof.cpp  benchmark_Roof_APALM.cpp  benchmark_Roof_DWR.cpp  benchmark_TensionWrinkling.cpp  benchmark_UniaxialTension.cpp  benchmark_Wrinkling.cpp  benchmark_Wrinkling_DWR.cpp  benchmark_cylinder_DC.cpp  benchmark_panel.cpp
doc/: benchmark_Balloon.dox  benchmark_Beam.dox  benchmark_Cylinder.dox  benchmark_FrustrumALM.dox  benchmark_FrustrumDC.dox  benchmark_MaterialTest.dox  benchmark_MaterialTestConv.dox  benchmark_Roof.dox  benchmark_UniaxialTension.dox  benchmark_Wrinkling.dox  example_DynamicBeamNL.dox  example_DynamicShell.dox  example_DynamicShellNL.dox  example_StaticSolvers.dox  gsALMBase.dox  gsALMSolvers.dox  gsBucklingSolver.dox  gsDynamicSolvers.dox  gsEigenSolvers.dox  gsElasticity_ArcLength.dox  gsElasticity_Static.dox  gsElasticity_Static_XML.dox  gsModalSolver.dox  gsStaticBase.dox  gsStaticSolvers.dox  gsStructuralAnalysis.dox  gsThinShell_ArcLength.dox  gsThinShell_Buckling.dox  gsThinShell_Modal.dox  gsThinShell_Static.dox  gsThinShell_Static_XML.dox  gsThinShell_Wrinkling.dox  gsThinShell_WrinklingFitting.dox  gsThinShell_WrinklingPerturbed.dox  gsThinShell_WrinklingPerturbedDC.dox  gsThinShell_WrinklingPerturbedDR.dox  gsTimeIntegrator.dox  nonlinear_shell_arcLength.dox  nonlinear_shell_dynamic.dox  nonlinear_shell_static.dox  (+3 more)
examples/: CMakeLists.txt  DRMethod.cpp  DRMethodALM.cpp  DRMethodDC.cpp  DRMethodLC.cpp  PlotIsolines.cpp  ShellPostProcess.cpp  benchmark_Balloon.cpp  benchmark_Beam.cpp  benchmark_Beam_APALM.cpp  benchmark_Cylinder.cpp  benchmark_Elasticity_Beam_APALM.cpp  benchmark_Frustrum.cpp  benchmark_FrustrumALM.cpp  benchmark_FrustrumDC.cpp  benchmark_Frustrum_APALM.cpp  benchmark_MaterialTest.cpp  benchmark_MaterialTestConv.cpp  benchmark_Pillow.cpp  benchmark_Pillow_ALM.cpp  benchmark_Pillow_DR.cpp  benchmark_Pillow_NR.cpp  benchmark_PointLoadALM.cpp  benchmark_Roof.cpp  benchmark_Roof_APALM.cpp  benchmark_Roof_DWR.cpp  benchmark_Roof_fit.cpp  benchmark_UniaxialTension.cpp  benchmark_Wrinkling.cpp  benchmark_WrinklingTFT.cpp  benchmark_Wrinkling_DWR.cpp  benchmark_Wrinkling_DWR_post.cpp  benchmark_Wrinkling_DWR_pre.cpp  benchmark_Wrinkling_Multipatch.cpp  benchmark_panel.cpp  buckling_shell_XML.cpp  buckling_shell_multipatch_XML.cpp  example_DisplacementControl.cpp  example_DynamicBeamNL.cpp  example_DynamicBeamNL_DWR.cpp  (+65 more)
filedata/: half_cylinder.xml  quarter_frustrum.xml  scordelis_lo_roof_shallow.xml
filedata/deformations/: wrinklingPanaitescu_quarter.xml
filedata/fitting/: wrinkling_deformation.xml
filedata/options/: MGRITsolver_options.xml  patch_quadrule.xml  patch_quadrule_NonUniform_C3_2.xml  patch_quadrule_S3_1-over.xml  patch_quadrule_S4_1.xml  patch_quadrule_S6_0.xml  shell_mesher_options_Roof.xml  solver_options.xml  static_solver.xml
filedata/pde/: H_shape_1p.xml  H_shape_small_1p.xml  beam.xml  (+42 more)
postprocessing/: plot.py
solvers/: CMakeLists.txt  buckling_shell_XML.cpp  buckling_shell_multipatch_XML.cpp  dynamic_shell_XML.cpp  dynamic_shell_multipatch_XML.cpp  modal_shell_XML.cpp  modal_shell_multipatch_XML.cpp  quasistatic_shell_XML.cpp  quasistatic_shell_multipatch_XML.cpp  static_shell_XML.cpp  static_shell_multipatch_XML.cpp  static_shell_multipatch_XML_torsion.cpp
src/: CMakeLists.txt  gsStructuralAnalysis.h  gsStructuralAnalysis_.cpp
src/gsALMSolvers/: gsALMBase.h  gsALMBase.hpp  gsALMConsistentCrisfield.h  gsALMConsistentCrisfield.hpp  gsALMCrisfield.h  gsALMCrisfield.hpp  gsALMLoadControl.h  gsALMLoadControl.hpp  gsALMRiks.h  gsALMRiks.hpp  gsALM_.cpp  gsAPALM.h  gsAPALM.hpp  gsAPALMBase.h  gsAPALMData.h  gsAPALMData.hpp  gsAPALMDataContainer.h  gsAPALM_.cpp
src/gsDynamicSolvers/: gsDynamicBase.h  gsDynamicBase.hpp  gsDynamicBathe.h  gsDynamicBathe.hpp  gsDynamicExplicitEuler.h  gsDynamicExplicitEuler.hpp  gsDynamicImplicitEuler.h  gsDynamicImplicitEuler.hpp  gsDynamicMassInverse.h  gsDynamicNewmark.h  gsDynamicNewmark.hpp  gsDynamicRK4.h  gsDynamicRK4.hpp  gsDynamicWilson.h  gsDynamicWilson.hpp  gsDynamicXBraid.h  gsDynamicXBraid_.cpp  gsDynamic_.cpp  gsTimeIntegrator.h  gsTimeIntegrator.hpp  gsTimeIntegrator_.cpp
src/gsEigenSolvers/: gsBucklingSolver.h  gsEigenProblemBase.h  gsEigenProblemBase.hpp  gsEigenProblem_.cpp  gsModalSolver.h
src/gsStaticSolvers/: gsContinuationBase.h  gsControlDisplacement.h  gsStaticBase.h  gsStaticBase_.cpp  gsStaticComposite.h  gsStaticComposite.hpp  gsStaticDR.h  gsStaticDR.hpp  gsStaticNewton.h  gsStaticNewton.hpp  gsStaticOpt.h  gsStaticOpt.hpp
src/gsStructuralAnalysisTools/: gsPanelCreator.hpp  gsPanelCreator_.cpp  gsSpaceTimeFitter.h  gsStructuralAnalysisTypes.h  gsStructuralAnalysisUtils.h
tutorials/: CMakeLists.txt  nonlinear_shell_arcLength.cpp  nonlinear_shell_dynamic.cpp  nonlinear_shell_static.cpp  nonlinear_solid_arcLength.cpp  nonlinear_solid_dynamic.cpp  nonlinear_solid_static.cpp
unittests/: gsStaticSolver_test.cpp
(+7 files in other folders)
